[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-e6-07-sdg-via-langgraph"
version = "0.1.0"
description = "SDG analysis using LangGraph"
requires-python = ">=3.9"
dependencies = [
    "langchain",
    "langgraph",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = [
    "--verbose",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
